--- a/src/components/announcement-board/announcement-board.module.scss
+++ b/src/components/announcement-board/announcement-board.module.scss
@@ -94,6 +94,7 @@
 }
 
 .announcementText {
+  color: #ffffff;
   font-size: 12px;
   text-align: left;
   width: 200px;
@@ -123,6 +124,7 @@
   text-decoration: underline;
   word-wrap: break-word;
   font-weight: lighter;
+  text-align: left;
 
   @media screen and (min-width: 360px) {
     font-size: 12px;
