--- a/src/components/announcements-page/announcements-page.module.scss
+++ b/src/components/announcements-page/announcements-page.module.scss
@@ -26,7 +26,7 @@
 }
 
 .selectedAnnouncement {
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   position: relative;
@@ -79,13 +79,23 @@
   }
 }
 
-.saveWrapper {
-  padding-top: 16px;
+.starButton {
   display: flex;
   align-items: center;
+  padding-top: 16px;
 
   @media screen and (min-width: 1024px) {
     padding-top: 0;
+  }
+
+  img {
+    width: 24px;
+    height: 22px;
+
+    @media screen and (min-width: 1024px) {
+      width: 15px;
+      height: 14px;
+    }
   }
 }
 
@@ -96,24 +106,6 @@
 
   @media screen and (min-width: 768px) {
     font-size: 13px;
-  }
-}
-
-.starButton {
-  position: relative;
-  width: 24px;
-  height: 22px;
-
-  svg {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-  }
-
-  @media screen and (min-width: 1024px) {
-    width: 15px;
-    height: 14px;
   }
 }
 
@@ -161,7 +153,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 14.5px;
-  background-color: #000;
+  background-color: #000000;
   border-radius: 0 0 10px 10px;
   height: 51px;
 
@@ -179,7 +171,7 @@
 
 .leftPanelText,
 .rightPanelText {
-  color: #fff;
+  color: #ffffff;
   font-size: 11px;
   font-weight: lighter;
   text-transform: uppercase;
@@ -243,7 +235,7 @@
 }
 
 .announcement {
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   display: grid;
