--- a/src/components/announcements-page/announcements-page.module.scss
+++ b/src/components/announcements-page/announcements-page.module.scss
@@ -3,7 +3,8 @@
   font-weight: lighter;
 }
 
-.announcementsWrapper {
+.announcementsWrapper,
+.noAnnouncementsWrapper {
   padding: 25px 0;
   position: absolute;
   left: 25px;
@@ -25,16 +26,31 @@
   }
 }
 
+.noAnnouncementsWrapper {
+  grid-template-columns: 1fr;
+}
+
 .selectedAnnouncement {
   background-color: #ffffff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   position: relative;
 
+  @media screen and (min-width: 768px) {
+    height: 459px;
+  }
+
   .content {
     padding: 24px 27px 16px 15px;
+    overflow-y: auto;
+
+    @media screen and (min-width: 768px) {
+      height: 408px;
+      position: relative;
+    }
 
     .title {
+      max-width: 560px;
       font-size: 21px;
       font-weight: lighter;
 
@@ -47,7 +63,7 @@
       font-size: 13px;
       line-height: 22px;
       max-height: 130px;
-      overflow-y: scroll;
+      overflow-y: auto;
 
       @media screen and (min-width: 768px) {
         font-size: 15px;
@@ -75,7 +91,7 @@
     margin-bottom: 32px;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
 }
 
@@ -115,6 +131,11 @@
   align-content: center;
   column-gap: 11px;
   width: fit-content;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    bottom: 30px;
+  }
 }
 
 .authorImage {
@@ -139,7 +160,7 @@
 
 .publishDate {
   font-size: 10px;
-  font-weight: bold;
+  font-weight: 400;
   color: #b1b1b1;
   grid-column: 2/3;
 
@@ -167,6 +188,10 @@
 .leftPanelSide,
 .rightPanelSide {
   display: flex;
+}
+
+.noRightPanelSide {
+  display: none;
 }
 
 .leftPanelText,
@@ -234,6 +259,10 @@
   }
 }
 
+.noAnnouncements {
+  display: none;
+}
+
 .announcement {
   background-color: #ffffff;
   box-shadow: 0 3px 6px #0000003c;
@@ -275,7 +304,7 @@
 
   ._date {
     font-size: 10px;
-    font-weight: bold;
+    font-weight: 400;
     color: #b1b1b1;
     grid-column: 2/3;
   }
