--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,6 +4,8 @@
   bottom: 0;
   left: 0;
   right: 0;
+  padding: 0 20px;
+  z-index: 1;
 }
 
 .modalBackdrop {
@@ -16,81 +18,79 @@
   background-color: rgba(0, 0, 0, 0.8);
 
   @media screen and (min-width: 500px) {
-    & {
-      background-color: rgba(0, 0, 0, 0.2);
-    }
+    background-color: rgba(0, 0, 0, 0.2);
   }
 }
 
 .modalBox {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 50px;
-  padding-left: 15px;
-  padding-right: 15px;
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 15px;
+  padding-top: 60px;
+  width: 100%;
   max-width: 800px;
-  width: 80%;
   height: 90%;
   max-height: 385px;
-  background-color: #fff;
+  background-color: #ffffff;
   z-index: 5;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-radius: 10px;
 
   @media screen and (min-width: 500px) {
-    & {
-      padding-top: 9px;
-    }
+    padding-top: 30px;
   }
 }
 
-.modalBox::-webkit-scrollbar {
-  display: none;
-}
-
 .closeButton {
+  position: absolute;
+  top: 20px;
+  right: 15px;
   padding: 0;
   width: 22px;
   height: 22px;
   outline: none;
   background: none;
   border: none;
-  position: absolute;
-  top: 18px;
-  right: 15px;
   cursor: pointer;
-  font-size: 21px;
   color: #a5a4a4;
 
   @media screen and (min-width: 768px) {
-    & {
-      width: 29px;
-      height: 29px;
-      right: 17px;
-      top: 23px;
-    }
+    width: 29px;
+    height: 29px;
+    right: 17px;
+    top: 23px;
   }
 }
 
+.mainContent {
+  width: 100%;
+  max-width: 430px;
+  margin: 0 auto;
+}
+
+
 .modalTitle {
-  font-weight: normal;
-  margin-bottom: 25px;
   font-size: 20px;
+  margin-bottom: 24px;
+  text-align: center;
+  font-weight: 300;
 
   @media screen and (min-width: 768px) {
-    & {
-      font-size: 25px;
-    }
+    font-size: 25px;
   }
 
   @media screen and (min-width: 1024px) {
-    & {
-      font-size: 30px;
-    }
+    font-size: 30px;
   }
+}
+
+.modalForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
