--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 0 20px;
+  padding: 74px 20px;
   z-index: 1;
 }
 
@@ -34,15 +34,16 @@
   padding-top: 60px;
   width: 100%;
   max-width: 800px;
-  height: 90%;
-  max-height: 385px;
+  height: 100%;
+  max-height: 417px;
   background-color: #ffffff;
   z-index: 5;
   overflow-y: auto;
   border-radius: 10px;
 
-  @media screen and (min-width: 500px) {
+  @media screen and (min-width: 360px) {
     padding-top: 30px;
+    max-height: 385px;
   }
 }
 
