--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -1,6 +1,6 @@
 .announcementBoard {
-  background-color: #fff;
-  color: #fff;
+  background-color: #ffffff;
+  color: #ffffff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   display: flex;
@@ -18,6 +18,7 @@
 }
 
 .announcementBoardTitleWrapper {
+  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.24);
   background-color: #242424;
   border-radius: 10px 10px 0 0;
   padding: 5px 11px;
@@ -51,7 +52,6 @@
   padding: 22px 11px;
   flex-direction: column;
   height: 240px;
-  overflow-y: scroll;
   margin-bottom: 43px;
 
   @media screen and (min-width: 360px) {
@@ -74,6 +74,7 @@
 
 .announcement {
   width: 100%;
+  height: 41px;
   padding: 4px 14px 7px 14px;
   background-color: #242424;
   box-shadow: 0 3px 6px #00000029;
@@ -84,6 +85,10 @@
 
   &:last-child {
     margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px){
+    height: 61px;
   }
 
   @media screen and (min-width: 1024px) {
@@ -100,7 +105,6 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-bottom: 5px;
 
   @media screen and (min-width: 360px) {
     width: 230px;
@@ -118,7 +122,7 @@
 }
 
 .announcementAuthor {
-  color: #fff;
+  color: #ffffff;
   font-size: 10px;
   text-decoration: underline;
   word-wrap: break-word;
@@ -145,5 +149,5 @@
 .noAnnouncementsTitle {
   font-size: 17px;
   color: #242424;
-  font-weight: lighter;
+  font-weight: 300;
 }
