--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -7,11 +7,11 @@
   flex-direction: column;
   min-height: 150px;
 
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     margin-top: 30px;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media (min-width: 1024px) {
     margin-top: 0;
     grid-row: 1/3;
   }
@@ -23,7 +23,7 @@
   border-radius: 10px 10px 0 0;
   padding: 5px 11px;
 
-  @media screen and (min-width: 1024px) {
+  @media (min-width: 1024px) {
     padding: 8px 16px;
   }
 }
@@ -54,28 +54,27 @@
   height: 240px;
   margin-bottom: 43px;
 
-  @media screen and (min-width: 360px) {
+  @media (min-width: 360px) {
     height: 260px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     padding: 25px 15px;
     height: 270px;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media (min-width: 1024px) {
     height: 340px;
   }
 
-  @media screen and (min-width: 1300px) {
+  @media (min-width: 1300px) {
     height: 360px;
   }
 }
 
 .announcement {
   width: 100%;
-  height: 41px;
-  padding: 4px 14px 7px 14px;
+  padding: 4px 17px 7px 14px;
   background-color: #242424;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   border-radius: 15px;
@@ -87,13 +86,9 @@
     margin-bottom: 0;
   }
 
-  @media screen and (min-width: 768px){
-    height: 61px;
-  }
-
-  @media screen and (min-width: 1024px) {
+  @media (min-width: 1024px) {
     margin-bottom: 27px;
-    padding: 10px 15px 13px 15px;
+    padding: 8px 35px 11px 20px;
   }
 }
 
@@ -104,20 +99,22 @@
   width: 200px;
   white-space: nowrap;
   overflow: hidden;
+  margin-bottom: 3px;
   text-overflow: ellipsis;
 
-  @media screen and (min-width: 360px) {
+  @media (min-width: 360px) {
     width: 230px;
     font-size: 14px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     width: 260px;
   }
 
-  @media screen and (min-width: 1300px) {
+  @media (min-width: 1300px) {
     width: 300px;
     font-size: 17px;
+    margin-bottom: 5px;
   }
 }
 
@@ -128,7 +125,7 @@
   word-wrap: break-word;
   text-align: left;
 
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     font-size: 11px;
   }
 }
