--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -53,15 +53,8 @@
   flex-direction: column;
 }
 
-.announcement {
-  width: 100%;
-  padding: 4px 17px 7px 14px;
-  background-color: #242424;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-  border-radius: 15px;
+.announcementWrapper {
   margin-bottom: 16px;
-  display: flex;
-  flex-direction: column;
 
   &:last-child {
     margin-bottom: 0;
@@ -69,6 +62,23 @@
 
   @media (min-width: 1024px) {
     margin-bottom: 27px;
+  }
+}
+
+.announcement {
+  width: 100%;
+  padding: 4px 17px 7px 14px;
+  background-color: #242424;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: 1024px) {
+    padding: 10px 15px 13px 15px;
+  }
+
+  @media (min-width: 1300px){
     padding: 8px 35px 11px 20px;
   }
 }
