--- a/src/components/Homepage/Homepage.module.scss
+++ b/src/components/Homepage/Homepage.module.scss
@@ -31,9 +31,9 @@
 .daysTimer {
   display: flex;
   background-color: #242424;
-  color: #fff;
+  color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 3px 6px #0000003c;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .24);
   justify-content: space-between;
   align-items: center;
   padding: 7px 14px 7px 8px;
