--- a/src/components/AnnouncementsPage/AnnouncementsPage.module.scss
+++ b/src/components/AnnouncementsPage/AnnouncementsPage.module.scss
@@ -38,7 +38,6 @@
   grid-row: 1/-1;
 
   @media screen and (min-width: 768px) {
-    max-height: 459px;
     height: fit-content;
   }
 
@@ -182,6 +181,7 @@
 .leftPanelSide,
 .rightPanelSide {
   display: flex;
+  align-items: center;
 }
 
 .noRightPanelSide {
