--- a/src/components/AnnouncementsPage/AnnouncementsPage.module.scss
+++ b/src/components/AnnouncementsPage/AnnouncementsPage.module.scss
@@ -265,7 +265,7 @@
   align-content: center;
   grid-template-columns: 33px 1fr;
   column-gap: 11px;
-  max-width: 270px;
+  width: 270px;
   height: 96px;
   margin-bottom: 25px;
   padding: 16px 20px 18px 16px;
