--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -1,12 +1,5 @@
 .tabs {
-  position: absolute;
-  left: 25px;
-  right: 25px;
-  margin-bottom: 48px;
-
-  @media (min-width: 400px){
-    position: static;
-  }
+  min-width: 270px;
 }
 
 .tabsList {
@@ -19,26 +12,10 @@
   }
 }
 
-.tabWrapper {
-  position: relative;
-  background-color: #ffffff;
-  box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.1); 
-
-  &:before {
-    content: "";
-    margin: 0;
-    border: none;
-    height: 5px;
-    width: 100%;
-    top: -5px;
-    position: absolute;
-    background: inherit;
-  }
-}
-
 .tabContent {
   background: #ffffff;
   border-radius: 0px 0px 10px 10px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1); 
   padding: 24px 16px;
 
   @media (min-width: 1024px){
