--- a/src/components/ProjectPage/ProjectAboutCompany/ProjectAboutCompany.module.scss
+++ b/src/components/ProjectPage/ProjectAboutCompany/ProjectAboutCompany.module.scss
@@ -18,6 +18,7 @@
   height: auto;
   display: inline-block;
   margin-bottom: 4px;
+  font-size: 13px;
 
   @media (min-width: 1024px) {
     margin-bottom: 9px;
