--- a/src/components/ProjectPage/ProjectHeader/ProjectHeader.module.scss
+++ b/src/components/ProjectPage/ProjectHeader/ProjectHeader.module.scss
@@ -27,6 +27,7 @@
   height: auto;
   display: inline-block;
   margin-bottom: 8px;
+  font-size: 13px;
 
   @media (min-width: 768px){
     margin-right: 25px;
