--- a/src/components/ProjectPage/ProjectDescription/ProjectDescription.module.scss
+++ b/src/components/ProjectPage/ProjectDescription/ProjectDescription.module.scss
@@ -45,6 +45,7 @@
   grid-row: 1/3;
   align-self: center;
   font-size: 13px;
+  border-radius: 50%;
 
   @media (min-width: 1024px){
     width: 42px;
