--- a/src/components/ProjectPage/ProjectHeader/ProjectHeader.module.scss
+++ b/src/components/ProjectPage/ProjectHeader/ProjectHeader.module.scss
@@ -9,13 +9,13 @@
 }
 
 .headerContent {
-  @media (min-width: 768px){
-   width: 80%; 
+  @media (min-width: 768px) {
+    width: 80%;
   }
 }
 
 .logoAndTitle {
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -29,7 +29,7 @@
   margin-bottom: 8px;
   font-size: 13px;
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     margin-right: 25px;
   }
 }
@@ -39,26 +39,26 @@
   font-weight: 300;
   margin-bottom: 8px;
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     font-size: 23px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 25px;
   }
 }
 
 .headerSubtitle {
   font-size: 13px;
-  color: #9D9D9D;
+  color: #9d9d9d;
   margin-bottom: 30px;
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     margin-bottom: 0;
     font-size: 15px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 17px;
   }
 }
