--- a/src/pages/Assets/Assets.module.scss
+++ b/src/pages/Assets/Assets.module.scss
@@ -1,5 +1,6 @@
 .container {
   padding-top: 74px;
+  padding-bottom: 30px;
 }
 
 .inputGroup {
@@ -13,4 +14,8 @@
 
 .button {
   margin-bottom: 30px;
+}
+
+.toggle {
+  margin-bottom: 15px;
 }
